--- a/sections/extra.tex
+++ b/sections/extra.tex
@@ -71,12 +71,18 @@ Fig \ref{fig:bestfit_mocks} shows the best-fitting estimates for $b$ vs $\fnl$ f
 \end{equation}
 For infinitesimal values of $\fnl$, the derivative becomes independent from $\fnl$ while for large values of $\fnl$ is decreases as $2/\fnl$, which implies for the $\fnl=0$ mocks, it is more likely that the likelihood is skewed toward negative values.
 
+\subsection{Contaminated mocks}
+Our nonlinear neural network-based approach is applied to the $\fnl=0$ and $76.9$ mocks. We only consider the methods that include running the neural network with three, four, and nine imaging systematic maps. The measured mean power spectrum of the mocks are shown in Figure \ref{fig:clmocks} for $\fnl=0$ (left) and $76.9$ (right). The solid and dashed curves show the measurements respectively from the clean and contaminated mocks.
+
+\begin{figure*}
+    \centering
+    \includegraphics[width=0.9\textwidth]{figures/clmocks.pdf}
+    \caption{The mean power spectrum of the $\fnl =0$ and $76.9$ mocks with (dashed) and without (solid) imaging systematics before ('No Weight') and after applying the non-linear cleaning method with three, four, and nine maps.}\label{fig:clmocks}
+\end{figure*}
 
 
+We find that the imaging treatment has removed some of the true clustering signal, and the amount of the over-subtraction is almost the same regardless of whether the mocks have systematics. The over-subtraction induces biases in the $\fnl$ constraints, as summarized in Table \ref{tab:contmocksmcmc}. The over-subtraction at low $\ell$ is so high that we get a poor fit after applying the mitigation with the nonlinear three maps approach, e.g., $\chi^{2}=86.8$ for the clean $\fnl=0$ mocks.
 
-
-
-% \subsubsection{Contaminated density fields}\label{ssec:contmocks}
 
 \begin{table*}
   %\begin{center}
@@ -97,6 +103,7 @@ Clean $0$ & Nine Maps                   & $-26.91$& $-26.92$& $-27.16<\fnl<-26.6
 Contaminated $0$ & Three Maps           & $-12.12$& $-12.13$& $-12.48<\fnl<-11.78$& $-12.83<\fnl<-11.44$ &   94.0\\
 Contaminated $0$ & Four Maps            & $-20.97$& $-20.98$& $-21.28<\fnl<-20.67$& $-21.58<\fnl<-20.37$ &  556.3\\
 Contaminated $0$ & Nine Maps            & $-28.13$& $-28.13$& $-28.36<\fnl<-27.90$& $-28.59<\fnl<-27.67$ & 6760.5\\
+\hline
 Clean $76.92$ & No Weight               & $ 77.67$& $ 77.67$& $ 77.17<\fnl< 78.16$& $ 76.71<\fnl< 78.64$ &   38.8\\
 Clean $76.92$ & Three Maps              & $ 54.57$& $ 54.57$& $ 54.14<\fnl< 55.01$& $ 53.72<\fnl< 55.45$ &  603.5\\
 Clean $76.92$ & Four Maps               & $ 38.38$& $ 38.38$& $ 37.99<\fnl< 38.78$& $ 37.60<\fnl< 39.16$ &  537.0\\
@@ -108,12 +115,7 @@ Contaminated $76.92$ & Nine Maps        & $  4.59$& $  4.58$& $  4.26<\fnl<  4.9
     \end{tabular}
     }
 \end{table*}
-
-\begin{figure*}
-    \centering
-    \includegraphics[width=0.9\textwidth]{figures/clmocks.pdf}
-    \caption{The mean power spectrum of the $\fnl =0$ and $76.9$ mocks with (dashed) and without (solid) imaging systematics before ('No Weight') and after applying the non-linear cleaning method with three, four, and nine maps.}\label{fig:clmocks}
-\end{figure*}
+Using the calibration parameters presented in \S \ref{ssec:calibration}, we account for the shift in the $\fnl$ constraints caused by the imaging systematic mitigation. We show the marginalized probability distributions on $\fnl$ before and after accounting for the over-correction in the right and left panels of Figure \ref{fig:contmcmc}.
 
 \begin{figure*}
 \centering
